[package]
name = "settlement"
version = "0.1.0"
description = "OCCA Settlement — non-custodial per-agent USDC vaults for the Open Market x402 rail"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "settlement"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# `init-if-needed` covers the claim handler's destination ATAs (provider +
# fee): both are Associated Token Accounts with deterministic addresses whose
# owner/mint Anchor re-verifies, so the re-init foot-gun does not apply.
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
# USDC is a classic SPL Token mint; the runtime path only uses `token` +
# `associated_token`. `token_2022` is added solely because anchor-spl's
# `idl-build` feature references `token_interface` (gated behind token_2022) in
# this toolchain — without it, IDL generation fails to compile.
anchor-spl = { version = "1.0.2", default-features = false, features = ["token", "associated_token", "token_2022"] }
